--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.prossel.unity-udp-rs485-relays": "https://github.com/prossel/Unity-UDP-RS485-Relays.git#upm",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.feature.development": "1.0.1",
     "com.unity.formats.fbx": "4.2.1",
